# decapod

./: .gitignore  .mise.toml  AGENTS.md  ARCHITECTURE_MEMO_TASK_ABSTRACTION.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  GEMINI.md.bak  IDENTITY.md  IMPLEMENTATION_TASK_PLAN.md  LICENSE  MIGRATION.md  OBLIGATIONS_ENGINE_PLAN.md  OBLIGATIONS_ENGINE_SUMMARY.md  OBLIGATION_TASKS.md  README.md  SECURITY.md  STATE_COMMIT_v1.md  TOOLS.md  build.rs  codex_analysis.md  flake.nix  my_changes.patch  obligation.rs  release-plz.toml  session  test_workspace.txt
.cargo/: config.toml
.decapod/: OVERRIDE.md  README.md  config.toml
.decapod-archive/: OVERRIDE.md  constitution.blob  constitution.checksum
.decapod-archive/data/: archive.db  broker.events.jsonl  cron.db  feedback.db  health.db  override.checksum  policy.db  proof.events.jsonl  todo.db  watcher.events.jsonl
.decapod/.stfolder/: syncthing-folder-509db3.txt
.decapod/contracts/: README_CONTRACTS.json
.decapod/governance/: plan.json
.githooks/: pre-commit
.github/: CI_OPTIMIZATION.md  FUNDING.yml  GITHUB_APP_SETUP.md  SPEED_IMPROVEMENTS.md  pull_request_template.md  release.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_proposal.yml
.github/workflows/: README.md  auto-tag.yml  ci.yml  commit-lint.yml  create-tag.yml  decapod-health.yml  publish-cratesio.yml  publish.yml  push-tag.yml  release-plz.yml  release.yml
artifacts/provenance/: artifact_manifest.json  intent_convergence_checklist.json  proof_manifest.json
assets/: decapod-demo-codex-live.tape  decapod-demo-codex.tape  decapod-demo-opencode-live.tape  decapod-demo.tape  plankton_config.json  plankton_multi_linter.sh  plankton_package_managers.sh  plankton_protect_configs.sh  plankton_settings.json  plankton_stop_guardian.sh
benches/: perf_1_1.rs  perf_1_2.rs  perf_1_3.rs
constitution/architecture/: ALGORITHMS.md  CACHING.md  CLOUD.md  CONCURRENCY.md  DATA.md  FRONTEND.md  MEMORY.md  OBSERVABILITY.md  SECURITY.md  UI.md  WEB.md
constitution/contracts/: risk-policy.example.json
constitution/core/: DECAPOD.md  DEMANDS.md  DEPRECATION.md  EMERGENCY_PROTOCOL.md  ENGINEERING_EXCELLENCE.md  GAPS.md  INTERFACES.md  METHODOLOGY.md  PLUGINS.md
constitution/docs/: ARCHITECTURE_OVERVIEW.md  CONTROL_PLANE_API.md  EVAL_TRANSLATION_MAP.md  GOVERNANCE_AUDIT.md  MAINTAINERS.md  MIGRATIONS.md  NEGLECTED_ASPECTS_LEDGER.md  PLAYBOOK.md  README.md  RELEASE_PROCESS.md  SECURITY_THREAT_MODEL.md  SKILL_TRANSLATION_MAP.md
constitution/interfaces/: AGENT_CONTEXT_PACK.md  ARCHITECTURE_FOUNDATIONS.md  CLAIMS.md  CONTROL_PLANE.md  DEMANDS_SCHEMA.md  DOC_RULES.md  GLOSSARY.md  INTERNALIZATION_SCHEMA.md  KNOWLEDGE_SCHEMA.md  KNOWLEDGE_STORE.md  LCM.md  MEMORY_INDEX.md  MEMORY_SCHEMA.md  PLAN_GOVERNED_EXECUTION.md  PROCEDURAL_NORMS.md  PROJECT_SPECS.md  RISK_POLICY_GATE.md  STORE_MODEL.md  TESTING.md  TODO_SCHEMA.md
constitution/methodology/: ARCHITECTURE.md  CI_CD.md  KNOWLEDGE.md  MEMORY.md  SOUL.md  TESTING.md
constitution/plugins/: APTITUDE.md  (+20 more)
dev/: AUDIT.md  gatling_results.jsonl  gatling_test.sh
docs/: ARCH_REVIEW_CANONICAL.md  ARCH_REVIEW_COVERAGE_MANIFEST.md  CONTROL_PLANE_API.md  LEVIE_GOVERNANCE_AUDIT.md  NEGLECTED_ASPECTS_LEDGER.md  README.md  RELEASE_PROCESS.md  VERIFICATION.md
examples/: claude_code_workflow.md  python_validate_demo.py  ts_validate_demo.js
scripts/: check_crate_description.sh  cron-executor.sh  setup-automation.sh  setup-git-hooks.sh
src/: cli.rs  lib.rs  main.rs  subsystems.rs
tasks/: lessons.md  todo.md
templates/: ADR.md  AGENTS.md  CLAIM_NODE.md  CLAUDE.md  CODEX.md  DRIFT_ROW.md  Dockerfile  GEMINI.md  INTENT.md  OPENCODE.md  OVERRIDE.md  README.md  SPEC.md
tests/: agent_rpc_suite.rs  assurance_harness.rs  canonical_evidence_gate.rs  chaos_replay.rs  cli_contract_enforcement.rs  cli_contracts.rs  commit_often_gate.rs  constitution_claims.rs  context_capsule_cli.rs  context_capsule_rpc.rs  context_capsule_schema.rs  contract_conformance.rs  crash_consistency.rs  daemonless_lifecycle.rs  entrypoint_correctness.rs  eval_kernel.rs  examples_interop.rs  gatling.rs  gatling_results.jsonl  group_broker.rs  group_broker_strict.rs  init_config_behavior.rs  kernel_phase4_regression.rs  knowledge_promotion_cli.rs  lcm_determinism.rs  plan_governed_execution.rs  release_check_policy.rs  rpc_golden_vectors.rs  schema_markdown.rs  skill_governance_kernel.rs  spec_conformance.rs  sqlite_hardening.rs  state_commit_phase_gate.rs  todo_enforcement.rs  todo_rebuild_compat.rs  validate_optional_artifact_gates.rs  validate_termination.rs  verify_mvp.rs  workspace_interlock.rs  workunit_cli.rs  (+2 more)
(+275 files in other folders)
