[package]
name = "decapod"
version = "0.0.3"
edition = "2024"
rust-version = "1.85"
description = "🦀 Decapod is a Rust-built, repo-native control-plane kernel for AI swarms—safe shared state, enforced truth, and loop-agnostic orchestration."
license = "MIT"
repository = "https://github.com/DecapodLabs/decapod"
homepage = "https://github.com/DecapodLabs/decapod"
readme = "README.md"
keywords = ["rust", "ai", "ai-agents", "control-plane", "orchestration"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    ".decapod/*",
    "dist/*",
    "target/*",
    "constitution_embed/*"
]

[workspace]
# members = ["crates/*"]

[dependencies]
rusqlite = "0.31"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
colored = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "1.1"
which = "6.0"
tiktoken-rs = "0.5"
chrono = "0.4"
sha2 = "0.10"
rust-embed = { version = "8.5", features = ["include-exclude"] }

[dev-dependencies]
tempfile = "3.10"
