[package]
name = "decapod"
version = "0.0.15"
edition = "2024"
rust-version = "1.85"
description = "🦀 Decapod is a Rust-built, repo-native control-plane kernel for AI swarms—safe shared state, enforced truth, and loop-agnostic orchestration."
license = "MIT"
repository = "https://github.com/DecapodLabs/decapod"
homepage = "https://github.com/DecapodLabs/decapod"
readme = "README.md"
keywords = ["rust", "ai", "ai-agents", "control-plane", "orchestration"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    ".decapod/*",
    "dist/*",
    "target/*",
    "constitution_embed/*"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "decapod"
path = "src/main.rs"

[workspace]
# members = ["crates/*"]

[dependencies]
rusqlite = "0.31"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
colored = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ulid = "1.1"
which = "6.0"
tiktoken-rs = "0.5"
chrono = "0.4"
sha2 = "0.10"
rust-embed = { version = "8.5", features = ["include-exclude"] }
toml = "0.8"

[build-dependencies]
bincode = "1.3"

[dev-dependencies]
tempfile = "3.10"
decapod = { path = "." }
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "plugins_todo_tests"
path = "tests/plugins/todo.rs"

[[test]]
name = "plugins_policy_tests"
path = "tests/plugins/policy.rs"


[[test]]
name = "core_tests"
path = "tests/core/core.rs"

[[bench]]
name = "perf_1_1"
path = "benches/perf_1_1.rs"
harness = false

[[bench]]
name = "perf_1_2"
path = "benches/perf_1_2.rs"
harness = false

[[bench]]
name = "perf_1_3"
path = "benches/perf_1_3.rs"
harness = false
